# BDS3_2024_img_analysis

./: BDS^3_2024_img_advanced.ipynb  BDS^3_2024_img_intro.ipynb  README.md  bds3-img-env.yml  int_data_frame.csv
templates/package-template/: .gitignore  LICENSE  README.md  pyproject.toml
templates/package-template/src/package_template/: module.py
templates/plugin-template/: .gitignore  README.md  setup.cfg
templates/plugin-template/src/plugin_template/: __init__.py  _widget.py  napari.yaml
