[project]
name = "package-template"
description = "package-template: empty python package for BDS^3 2024"

version = "0.0.1"
authors = [{name = "Borys Olifirov", email = "omnia.fatum@gmail.com"}]

readme = "README.md"
license = {file = "LICENSE"}

requires-python = ">=3.9"

dependencies = [
    "numpy"
]


classifiers=[
    'Development Status :: 3 - Alpha',  # 4 - Beta, 5 - Production/Stable
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
    'Operating System :: OS Independent',

    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Image Processing',
]


[project.urls]
Documentation = "https://github.com/wisstock/BDS3_2024_img_analysis"
Repository = "https://github.com/wisstock/BDS3_2024_img_analysis"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"