[metadata]
name = plugin-template
version = 0.0.1

author = Borys Olifirov
author_email = omnia.fatum@gmail.com
license = MIT
description = napari plugin template for BDS^3 2024 
long_description = file: README.md
long_description_content_type = text/markdown

project_urls =
    Documentation = https://github.com/wisstock/BDS3_2024_img_analysis
    Source Code = https://github.com/wisstock/BDS3_2024_img_analysis
    Bug Tracker = https://github.com/wisstock/BDS3_2024_img_analysis/issues
    User Support = https://github.com/wisstock/BDS3_2024_img_analysis/issues

classifiers =
    Framework :: napari

    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src
install_requires =
    matplotlib
    napari
    numpy
    scikit-image

[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points]
napari.manifest =
    plugin-template = plugin_template:napari.yaml